Add new btn with styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <p id='text'>Волшебные кнопки</p>
+    <p id="text">Волшебные кнопки</p>
     <button id="magic-btn">Нажми на меня</button>
     
 </body>
