--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script defer src="./index.js"></script>
+    <script src="./index.js" defer></script>
     <link rel="stylesheet" href="./index.css">
     <title>Exercise 1</title>
 </head>
