--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <p id='text'>Волшебные кнопки</p>
     <button id="magic-btn">Нажми на меня</button>
-    
+    <div id="target-element">
+        
+    </div>
 </body>
 </html>
